# mixedbreadTakeHome

./: README.md  pyproject.toml
src/mixedbread_store/: __init__.py  cli.py  store.py
tests/: test_store.py
